added polly for reqest timouts

--- a/src/Play.Inventory.Service/appsettings.json
+++ b/src/Play.Inventory.Service/appsettings.json
@@ -12,5 +12,8 @@
     "Host": "localhost",
     "Port": 27017
   },
+  "PlayCatalogService": {
+    "HostAddress": "https://localhost:5269/api/"
+  },
   "AllowedHosts": "*"
 }
